--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,79 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title> Tab 1 </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-content class="ion-padding">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12">
+          <ion-select
+            label="Tipo"
+            [multiple]="true"
+            interface="popover"
+            label-placement="floating"
+            [(ngModel)]="filter"
+            (ionChange)="filterProducts()"
+          >
+            <ion-select-option value="Abarrotes"> Abarrotes </ion-select-option>
+            <ion-select-option value="Frutas y verduras">
+              Frutas y verduras
+            </ion-select-option>
+            <ion-select-option value="Limpieza"> Limpieza </ion-select-option>
+            <ion-select-option value="Farmacia"> Farmacias </ion-select-option>
+          </ion-select>
+        </ion-col>
+      </ion-row>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+      <ion-row>
+        <ion-col size="6" *ngFor="let product of productsFounds; index as i">
+          <ion-card class="ion-text-center">
+            <img [src]="product.photo+i" />
+            <ion-card-header>
+              <ion-card-title>
+                {{product.name}}
+                <ion-badge [color]="getColor(product.type)">
+                  {{product.type}}</ion-badge
+                >
+              </ion-card-title>
+              <ion-card-subtitle>
+                {{ product.price | currency }}
+              </ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content> {{product.description}} </ion-card-content>
+            <ion-button (click)="addProducts(product)">Agregar</ion-button>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
 </ion-content>
+
+<ion-footer collapse="fade">
+  <ion-toolbar *ngFor="let product of addedProducts; index as i">
+    <div></div>
+    <ion-item>
+      <ion-label>
+        {{product.name}}
+        {{product.price | currency}}
+      </ion-label>
+      <ion-button (click) = "removeProduct(i)">
+        <ion-icon name="trash-outline"></ion-icon>
+      </ion-button>
+      <ion-button (click) = "decrementProduct(i)">
+        <ion-icon name="remove-outline"></ion-icon>
+      </ion-button>
+      <ion-button (click) = "incrementProduct(i)">
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-button>
+      
+      <ion-badge [color]="getColor(product.type)" slot="end">
+        Cantidad: {{productCounts[product.type]}}
+      </ion-badge>
+    </ion-item>
+  </ion-toolbar>
+
+  <div class="ion-padding">Total: {{total | currency}}</div>
+</ion-footer>
