--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,38 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Favoritos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let product of favorites; index as i">
+        <ion-card class="ion-text-center">
+          <img [src]="product.photo+i" />
+          <ion-card-header>
+            <ion-card-title>
+              {{product.name}}
+              <ion-badge [color]="getColor(product.type)">
+                {{product.type}}</ion-badge
+              >
+            </ion-card-title>
+            <ion-card-subtitle>
+              {{ product.price | currency }}
+            </ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content> {{product.description}} </ion-card-content>
+          
+          <ion-button (click)="addProducts(product)">Agregar</ion-button>
+          <!--
+          <ion-button data-value="true" (click)="addFavorites(product)" color="success" ><ion-icon name="star"></ion-icon></ion-button>
+        -->
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+
+
