--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -26,9 +26,9 @@
           <ion-card-content> {{product.description}} </ion-card-content>
           
           <ion-button (click)="addProducts(product)">Agregar</ion-button>
-          <!--
-          <ion-button data-value="true" (click)="addFavorites(product)" color="success" ><ion-icon name="star"></ion-icon></ion-button>
-        -->
+          
+          <ion-button data-value="true" (click)="removeFavorites(i)" color="success" ><ion-icon name="star-outline"></ion-icon></ion-button>
+        
         </ion-card>
       </ion-col>
     </ion-row>
