Implementacion de tab4, solo falta limpiar carrito anterior

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -19,8 +19,6 @@
         {{product.name}}
         {{product.price | currency}}
       </ion-label>
-      
-      
       <ion-button (click) = "removeProduct(i)">
         <ion-icon name="trash-outline"></ion-icon>
       </ion-button>
@@ -39,5 +37,8 @@
 </ion-content>
 
 <ion-footer collapse="fade">
-  <div class="ion-padding">Total: {{total | currency}}</div>
+  <div class="ion-padding" style="float: left;">Total: {{total | currency}}</div>
+  <ion-button (click)="addCars(addedProducts,total)" color="success" style="float: right;">
+    <ion-icon name="card-outline"></ion-icon>
+  </ion-button>
 </ion-footer>
