--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,11 @@
       <ion-icon name="star-outline"></ion-icon>
       <ion-label>Favoritos</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="tab4" href="/tabs/tab4">
+      <ion-icon name="card-outline"></ion-icon>
+      <ion-label>Historial Carritos</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
